@@ -133,6 +133,7 @@ LEGAL_VALUES = {
         'ko': 'Korean',
         'lt': 'Lithuanian',
         'ml': 'Malayalam',
+        'mr': 'Marathi',
         'nb': 'Norwegian (Bokmål)',
         'nl': 'Dutch',
         'pa': 'Punjabi',
@@ -202,6 +203,7 @@ LEGAL_VALUES = {
         'ko': 'ko',
         'lt': 'lt',
         'ml': 'ml',
+        'mr': 'mr',
         'nb': 'nb',
         'nl': 'nl',
         'pa': 'pa',
@@ -257,6 +259,7 @@ LEGAL_VALUES = {
         'ko': 'ko',
         'lt': 'lt',
         'ml': 'ml',
+        'mr': 'mr',
         'nb': 'nb',
         'nl': 'nl',
         'pa': 'pa-in',
